# Texere

./: .gitignore  AGENTS.md  Makefile  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  release.yml
.hive/: issues.jsonl
.sisyphus/evidence/: task-6-settings-ts.txt
.sisyphus/notepads/T13/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/settings-ui/: learnings.md
.sisyphus/notepads/wave5/: t16.md
scripts/: bump-version.mjs  prepare-macos-release.mjs  release-cut.mjs  smoke-e2e-ai-settings.sh  smoke-e2e-desktop.sh
src/: App.svelte  App.test.ts  app.css  main.ts  settings-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  ai.rs  appearance.rs  clipboard.rs  cursor_position.rs  lib.rs  notes.rs  notifications.rs  settings.rs  templates.rs  tray.rs  types.rs  window.rs
src/lib/: AGENTS.md  ai.test.ts  ai.ts  appearance.test.ts  appearance.ts  clipboard.test.ts  clipboard.ts  cursorPosition.test.ts  cursorPosition.ts  notes.ts  settings.test.ts  settings.ts  templates.test.ts  templates.ts  types.ts
src/lib/components/: AIFormatButton.svelte  AIFormatButton.test.ts  Editor.svelte  Editor.test.ts  HotkeyRecorder.svelte  SettingsPanel.e2e.test.ts  SettingsPanel.svelte  SettingsPanel.test.ts  StatusBar.svelte  TemplateManager.e2e.test.ts  TemplateManager.svelte  TemplateManagerHarness.svelte  (+4 more)
src/test/: MockWindowContainer.svelte
(+2 files in other folders)
